# mcp-app-travel

mcp-app/: SPEC.md  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
mcp-app/server/src/: index.ts
mcp-app/web/src/: index.css  types.ts
mcp-app/web/src/components/: ErrorToasts.tsx
mcp-app/web/src/components/Layout/: AppLayout.tsx
mcp-app/web/src/components/Map/: RoutePolyline.tsx  TravelMap.tsx
mcp-app/web/src/components/Sidebar/: DayPlan.tsx  ImagePredict.tsx  PlaceCard.tsx  SearchBar.tsx  SearchResults.tsx  SegmentModePicker.tsx  Sidebar.tsx  TransportSelector.tsx
mcp-app/web/src/store/: travelStore.ts
mcp-app/web/src/widgets/: plan-travel.tsx
python_server/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  pyproject.toml
python_server/src/: main.py
python_server/src/domain/place/: models.py  service.py
python_server/src/inbound/http/: app.py
python_server/src/inbound/http/routes/: f.json  models.py  places.py
python_server/src/infrastructure/: http.py  logger.py  settings.py
python_server/src/outbound/: google_maps.py  google_routes.py  location_guesser.py
python_server/src/outbound/google_maps/: client.py
