[project]
name = "python_server"
version = "0.1.0"
description = "python_server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.135.2",
    "ipython>=9.12.0",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
    "uvloop>=0.22.1",
]
